# M590-App

./: .gitignore  CITATION.cff  CLAUDE.md  LEGAL-TODO.md  LICENSE  README.md  REMARKS.md  THIRD-PARTY-LICENSES.txt  TODO.md  build.sh  polylookup_build.md
app/: .env  .gitignore  CLAUDE.md  build.sh  capacitor.config.ts  createIcons.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  web-app.code-workspace
app/android/app/: build.gradle
app/ios/App/: Podfile
app/scripts/: build.sh  bump-version.cjs  createIcons.sh  gen-third-party-licenses.cjs
app/src/: App.scss  App.tsx  index.scss  main.tsx  types.ts  variables.scss  vite-env.d.ts
app/src/components/: AssignmentSteps.scss  AssignmentSteps.tsx  BackButton.scss  BackButton.tsx  BottomNav.scss  BottomNav.tsx  ClimateBarChart.scss  ClimateBarChart.tsx  DemoHint.scss  DemoHint.tsx  ErrorBoundary.scss  ErrorBoundary.tsx  FieldForm.scss  FieldForm.tsx  InfoHint.scss  InfoHint.tsx  InstallPrompt.scss  InstallPrompt.tsx  IosInstallOverlay.tsx  IrrigationPeriodPicker.scss  IrrigationPeriodPicker.tsx  LocateIcon.tsx  LocationPicker.scss  LocationPicker.tsx  LogoBar.scss  LogoBar.tsx  Messages.scss  Messages.tsx  OnboardingBanner.scss  OnboardingBanner.tsx  OnboardingOverlay.scss  OnboardingOverlay.tsx  ProjectForm.scss  (+5 more)
app/todo/: PlaystoreText.txt  Tasks.md
rust/: Cargo.toml
rust/polygon_query_test/: .gitignore  test_polylookup.c  test_polylookup.py
rust/src/: lib.rs  wasm.rs
scripts/: build.sh  build_all.sh  build_raster.py
web/: index.html
(+97 files in other folders)
