[package]
name = "polylookup"
version = "0.4.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flatgeobuf = "5"
geo = "0.28"
geo-traits = { version = "0.3", features = ["geo-types"] }
geo-types = "0.7"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"   # NEW: for a safe global
