[package]
name = "polylookup"
version = "0.4.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flatgeobuf = "5"
geo = "0.28"
geo-traits = { version = "0.3", features = ["geo-types"] }
geo-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
once_cell = "1.19"
